make only necessary function public and give testfile a clear name

--- a/Google_tests/CMakeLists.txt
+++ b/Google_tests/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(lib)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 
-add_executable(Google_Tests_run test1.cpp )
+add_executable(Google_Tests_run sunTracer_test1.cpp)
 
 target_link_libraries(Google_Tests_run SunTracer_lib)
 
