--- a/Google_tests/CMakeLists.txt
+++ b/Google_tests/CMakeLists.txt
@@ -3,7 +3,9 @@ add_subdirectory(lib)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 
-add_executable(Google_Tests_run sunTracer_test1.cpp)
+add_executable(Google_Tests_run sunTracer_test1.cpp
+        Shade_Sun_Exposure_Checker_test.cpp
+)
 
 target_link_libraries(Google_Tests_run SunTracer_lib)
 
